# gore

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README.md  vcpkg.json
.github/: pull_request_template.md
cmake/: Resources.cmake  RpslCompile.cmake  (+3 more)
sample/: CMakeLists.txt  main.cpp
sample/App/: SampleApp.cpp  SampleApp.h
sample/Scripts/: CameraController.cpp  CameraController.h  DeleteMultipleGameObjectsAfterSeconds.cpp  DeleteMultipleGameObjectsAfterSeconds.h  PeriodicallyChangeWorldTRS.cpp  PeriodicallyChangeWorldTRS.h  PeriodicallySwitchParent.cpp  PeriodicallySwitchParent.h  SelfDestroyAfterSeconds.cpp  SelfDestroyAfterSeconds.h  SelfMoveBackAndForth.cpp  SelfMoveBackAndForth.h  SelfRotate.cpp  SelfRotate.h  SelfScaleInBetweenRange.cpp  SelfScaleInBetweenRange.h  TestComponent.cpp  TestComponent.h
sample/Scripts/Math/: BitUtils.h
sample/Scripts/Rendering/: GlobalData.h  PerDrawData.h  PerframeData.h
sample/Scripts/Utils/: GraphicsUtils.cpp  GraphicsUtils.h
src/: CMakeLists.txt  Export.h  Prefix.h
src/Core/: App.cpp  App.h  Log.cpp  Log.h  SimpleMath.cpp  SimpleMath.h  SimpleMath.inl  System.cpp  System.h  Time.cpp  Time.h
src/FileSystem/: FileSystem.cpp  FileSystem.h
src/Graphics/: CommandPool.cpp  CommandPool.h  Context.cpp  Context.h  Device.cpp  Device.h  Graphics.h  Instance.cpp  Instance.h  Swapchain.cpp  Swapchain.h  Utils.cpp  Utils.h  VulkanBuffer.cpp  VulkanBuffer.h
src/Graphics/Vulkan/: VulkanExtensions.cpp  VulkanExtensions.h  VulkanExtensions.inl  VulkanIncludes.h
src/Input/: InputAction.cpp  InputAction.h  InputDevice.cpp  InputDevice.h  InputEnums.h  InputSystem.cpp  InputSystem.h  KeyCode.h
src/Input/GLFW/: GLFWInputDevice.cpp  GLFWInputDevice.h  GLFWInputSystem.cpp  GLFWInputSystem.h
src/Job/: Job.h  JobHandle.cpp  JobHandle.h  JobQueue.cpp  JobQueue.h  WorkerThread.cpp  WorkerThread.h
src/Math/: Color.h  Color.inl  CommonValues.cpp  Constants.h  Defines.h  Math.h  Matrix4x4.cpp  Matrix4x4.h  Matrix4x4.inl  Plane.h  Plane.inl  Quaternion.cpp  Quaternion.h  Quaternion.inl  Ray.h  Rect.h  Rectangle.h  Rectangle.inl  SimpleMath.cpp  SimpleMath.h  SimpleMath.inl  TQS.cpp  TQS.h  Types.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector3.inl  Vector4.cpp  Vector4.h  Vector4.inl  Viewport.cpp  Viewport.h
src/Memory/: OffsetAllocator.cpp  OffsetAllocator.h  OffsetAllocatorTest.cpp
src/Object/: Camera.cpp  Camera.h  Camera.inl  Component.cpp  Component.h  GameObject.cpp  GameObject.h  Object.cpp  Object.h  Transform.cpp  Transform.h
src/Platform/: LoadLibrary.h  Threading.h
src/Platform/CommonUnix/: UnixLoadLibrary.cpp  UnixThreading.cpp
src/Platform/Linux/: X11Window.cpp  X11Window.h
src/Platform/Windows/: Win32LoadLibrary.cpp  Win32Threading.cpp  Win32Window.cpp  Win32Window.h
src/Platform/macOS/: CocoaWindow.h  CocoaWindow.mm  FileSystem.mm
src/Profiler/: microprofile.cpp  microprofile_html.h
src/Rendering/: AutoRenderPass.cpp  AutoRenderPass.h  BindGroup.h  BindGroupTest.cpp  BindLayout.h  Buffer.cpp  Buffer.h  CommandRing.cpp  CommandRing.h  DescriptorPoolHolder.h  DummyVertex.h  DummyVulkan.cpp  DummyVulkan.h  DynamicBinding.cpp  DynamicBinding.h  DynamicBuffer.h  GoreRenderingExample.md  GraphicsCaps.cpp  GraphicsCaps.h  GraphicsFormat.h  GraphicsPipeline.h  GraphicsPipelineDesc.h  GraphicsResource.h  GraphicsResourceDesc.h  GraphicsResourcePrefix.h  GrpahicsResource.h  Handle.h  Pipeline.h  PipelineDesc.h  PipelineLayout.h  Pool.h  PoolHandleTest.cpp  RawBindGroupUpdateDesc.h  RenderContext.cpp  RenderContext.h  RenderContextHelper.cpp  RenderContextHelper.h  RenderContextTest.cpp  RenderPass.h  RenderPassDesc.h  (+8 more)
src/Rendering/Components/: Light.cpp  Light.h  Material.cpp  Material.h  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  RendererManager.cpp  RendererManager.h
src/Rendering/DrawStream/: Draw.cpp  Draw.h  DrawStream.cpp  DrawStream.h  Pass.h
src/Rendering/GPUData/: GPUScene.h  GlobalConstantBuffer.h  PerframeData.h
src/Rendering/GraphicsCaching/: HashCaching.h  ResourceCache.cpp  ResourceCache.h
src/Rendering/Math/: PackedMatrix.cpp  PackedMatrix.h  Readme.md
src/Rendering/RPSL/: hello_triangle.rpsl
src/Rendering/RenderPipelineShader/: RpsSystem.cpp  RpsSytem.h
src/Rendering/System/: GPUTransformChangeSystem.cpp  GPUTransformChangeSystem.h  MeshRendererSystem.cpp  MeshRendererSystem.h
src/Rendering/UnifiedGeometryBuffer/: UGB.md
src/Rendering/Utils/: GeometryUtils.cpp  GeometryUtils.h
src/Rendering/Vulkan/: VulkanBarrier.cpp  VulkanBarrier.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandPool.cpp  VulkanCommandPool.h  VulkanDevice.cpp  VulkanDevice.h  VulkanExtensions.cpp  VulkanExtensions.h  VulkanExtensions.inl  VulkanFramebuffer.cpp  VulkanFramebuffer.h  VulkanImage.cpp  VulkanImage.h  VulkanIncludes.cpp  VulkanIncludes.h  VulkanInstance.cpp  VulkanInstance.h  VulkanPipeline.cpp  VulkanPipeline.h  VulkanQueue.cpp  VulkanQueue.h  VulkanRenderPass.cpp  VulkanRenderPass.h  VulkanShader.cpp  VulkanShader.h  VulkanSurface.cpp  VulkanSurface.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanSynchronization.cpp  VulkanSynchronization.h
src/Scene/: Scene.cpp  Scene.h
src/Shaders/ShaderLibrary/: BindlessMaterial.hlsl  GlobalBinding.hlsl  GlobalConstantBuffer.hlsl  ShadowPassBinding.hlsl
src/Shaders/ShaderLibrary/Core/: Common.hlsl  FallbackError.hlsl  GlobalConstantBuffer.hlsl  VulkanBinding.hlsl  VulkanVariables.hlsl
src/Shaders/ShaderLibrary/UGB/: UGBGlobalBindGroup.hlsl
src/Shaders/ShaderLibrary/Utils/: Cube.hlsl  Quad.hlsl  Triangle.hlsl
src/Shaders/sample/: SimpleLit.hlsl  UnLit.hlsl  cube.hlsl  quad.hlsl  shadowmap.hlsl  triangle.hlsl
src/Test/: BitReaderWriterTest.cpp  TestExampleTest.cpp  TestPrefix.h
src/Utilities/: BitReader.cpp  BitReader.h  BitWriter.cpp  BitWriter.h  Concepts.h  Defines.h  GLTFLoader.cpp  GLTFLoader.h
src/Utilities/Allocator/: ArrayAllocator.cpp  ArrayAllocator.h
src/Utilities/Hash/: StdHash.h
src/Utilities/Math/: BitUtils.h  MathHelpers.h
src/Windowing/: Window.cpp  Window.h
(+1 files in other folders)
